# readMapper

./: CMakeLists.txt  algo1.hpp  common.h  create_bit_v.cpp  create_index.cpp  mappability.cpp  readMapper.cpp
